src/objects/School_contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>School_contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipName>School_contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>School Contact</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>School Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>